--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+<!--				<configuration>-->
+<!--					<image>-->
+<!--						<builder>rishitha98/builder:tiny</builder>-->
+<!--					</image>-->
+<!--				</configuration>-->
 			</plugin>
 		</plugins>
 	</build>
